----------------------------------
[2009-09-24 Ver 0.44 -> 0.50]
- Added external link confirm action.
- Added config item 'trust_ip' and 'session_lifetime'.
- Modified session check logic.
- 'Wizin' updated from '0.52' to '0.53'.
- 'WizXc' module updated from '0.30' to '0.31'.
----------------------------------
[2009-09-14 Ver 0.43 -> 0.44]
- Fixed bug about duplicate constant in english language file.
- Fixed bug about get block object with deleted block id.
- Fixed bug about get selected block data.
- 'Wizin' updated from '0.49' to '0.52'.
----------------------------------
[2009-08-11 Ver 0.42 -> 0.43]
- Fixed bug about visible default value on BlockSetting.
- Fixed bug about get block process twice when block has no contents.(thx masahiro)
- Fixed bug about infinite redirect when session timeout.
- Added xoopsform_dhtmltextarea template for mobile.
- Added css filter call.
- Modified (refactoring) filter logic.
- Modified theme override logic.
- Assign 'user' module config for template.
- Modified 'user' module config check in Login action.
- 'Wizin' updated from '0.47' to '0.49'.
- 'WizXc' module updated from '0.29' to '0.30'.
----------------------------------
[2009-05-19 Ver 0.41 -> 0.42]
- Fixed bug about non-object function called error when accessed site top.(thx mock)
- 'Wizin' updated from '0.46' to '0.47'.
----------------------------------
[2009-05-19 Ver 0.40 -> 0.41]
- Fixed bug about visible mobile theme when not mobile client access.(thx mbxoops)
- Fixed bug about admin sidemenu notice message.
- Fixed bug about some column's data type.(thx key and yufoufu)
- Fixed bug about parse error on php4.(thx toshikun)
- Fixed bug about get block process twice.(thx masahiro)
- Added emoji input support.(thx mbxoops)
- 'Wizin' updated from '0.42' to '0.46'.
----------------------------------
[2009-04-18 Ver 0.35 -> 0.40]
- Fixed bug about sensitive upper-cese with module dirname.(thx naoto_is)